# AoC2025

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
solutions/: __init__.py  day01.py
utils/: __init__.py  helpers.py
