[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent of Code 2025 Solutions"
authors = [{name = "AoC Developer"}]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["solutions*", "utils*"]
